maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:85: error: method rechercheASuivre has return statement; needs result type
    return (x+1, y)
    ^JediEscaper:87: error: method rechercheASuivre has return statement; needs result type
    return (x,y+1)
    ^JediEscaper:89: error: method rechercheASuivre has return statement; needs result type
    return (x-1,y)
    ^JediEscaper:91: error: method rechercheASuivre has return statement; needs result type
    return (x,y-1)
    ^